clusters/homelab/infra/traefik-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
