clusters/homelab/infra/argocd-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-traefik
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.kostjaz.ru`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
