clusters/homelab/infra/grafana-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-traefik
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.kostjaz.ru`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
